# Robotics-lab-project

./: LICENCE.md  README.md  blocks_yolov3_detection_config.json  project_overview.md  project_structure.txt  test.py  train.py
kinematics/: CMakeLists.txt  TODO.txt  package.xml
kinematics/devel/: _setup_util.py  env.sh
kinematics/html/: index.html
kinematics/include/: controller.h  directKinematics.h  functions.h  gripper.h  inverseDifferentialKinematics.h  inverseKinematics.h  kinematics.h  typedefs.h
kinematics/kinematics/: CMakeLists.txt  package.xml
kinematics/kinematics/include/: JointIntollerance.h  controller.h  gripper.h  inverseKinematics.h
kinematics/kinematics/src/: controller.cpp  directKinematics.cpp  gripper.cpp  motion_planning.cpp  prova.cpp
kinematics/latex/: refman.tex
kinematics/models/X1-Y1-Z2/: model.config
kinematics/msg/: JointIntollerance.msg
kinematics/src/: Doxyfile  controller.cpp  directKinematics.cpp  functions.cpp  gripper.cpp  inverseDifferentialKinematics.cpp  inverseKinematics.cpp  kinematics.cpp  kinematicsDefault.cpp  motion_planning.cpp  prova.cpp
spawner/: CMakeLists.txt  package.xml
spawner/launch/: lego_world.launch  rviz.launch  upload.launch
spawner/rviz/: conf.rviz
spawner/scripts/: save.py  spawner1.py  spawner1Default.py  spawner2.py  spawner2Default.py  spawner3.py  spawner3Default.py  spawner4.py  spawner4Default.py  spawnerGeneral.py
spawner/urdf/: X1-Y2-Z1.xacro  X1-Y2-Z2-TWINFILLET.xacro  X1-Y2-Z2.xacro  X1-Y3-Z2.xacro  X2-Y2-Z2-FILLET.xacro  X2-Y2-Z2.xacro
spawner/worlds/: main_scene.world
(+441 files in other folders)
